Safari365 Prod/src/objects/Exposure_ROE__c.object
<CustomObject>
    <fields>
        <fullName>CC_ROE_for_EUR_in_AUD__c</fullName>
        <label>CC ROE for EUR in AUD</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_ROE_for_EUR_in_EUR__c</fullName>
        <label>CC ROE for EUR in EUR</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_ROE_for_EUR_in_GPB__c</fullName>
        <label>CC ROE for EUR in GPB</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_ROE_for_EUR_in_USD__c</fullName>
        <label>CC ROE for EUR in USD</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_ROE_for_USD_in_AUD__c</fullName>
        <label>CC ROE for USD in AUD</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_ROE_for_USD_in_EUR__c</fullName>
        <label>CC ROE for USD in EUR</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_ROE_for_USD_in_GPB__c</fullName>
        <label>CC ROE for USD in GPB</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_ROE_for_USD_to_USD__c</fullName>
        <label>CC ROE for USD to USD</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_ROE_for_ZAR_to_AUD__c</fullName>
        <label>CC ROE for ZAR to AUD</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_ROE_for_ZAR_to_EUR__c</fullName>
        <label>CC ROE for ZAR to EUR</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_ROE_for_ZAR_to_GPB__c</fullName>
        <label>CC ROE for ZAR to GPB</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_ROE_for_ZAR_to_USD__c</fullName>
        <label>CC ROE for ZAR to USD</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_Currency__c</fullName>
        <formula>Text(Quotation__r.Opportunity__r.Client_Display_Currency__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXP_Quotation_Sale_Total_in_Selected_CC__c</fullName>
        <formula>EXP_Subtotal_for_EUR_in_CC__c +  EXP_Subtotal_for_USD_in_CC__c + EXP_Subtotal_for_ZAR_in_CC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EXP Quotation Sale Total in Selected CC</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXP_ROE_EUR_to_CC__c</fullName>
        <formula>Case( Client_Currency__c,&quot;AUD&quot;, CC_ROE_for_EUR_in_AUD__c, &quot;USD&quot;, CC_ROE_for_EUR_in_USD__c, &quot;EUR&quot;,CC_ROE_for_EUR_in_EUR__c,&quot;GBP&quot;, CC_ROE_for_EUR_in_GPB__c,0.0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EXP ROE EUR to CC</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXP_ROE_USD_to_CC__c</fullName>
        <formula>Case( Client_Currency__c,&quot;AUD&quot;, CC_ROE_for_USD_in_AUD__c, &quot;USD&quot;, CC_ROE_for_USD_to_USD__c, &quot;EUR&quot;,CC_ROE_for_USD_in_EUR__c,&quot;GBP&quot;, CC_ROE_for_USD_in_GPB__c,0.0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EXP ROE USD to CC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXP_ROE_ZAR_to_CC__c</fullName>
        <formula>Case( Client_Currency__c,&quot;AUD&quot;, CC_ROE_for_ZAR_to_AUD__c, &quot;USD&quot;, CC_ROE_for_ZAR_to_USD__c, &quot;EUR&quot;,CC_ROE_for_ZAR_to_EUR__c,&quot;GBP&quot;, CC_ROE_for_ZAR_to_GPB__c,0.0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EXP ROE ZAR to CC</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXP_Subtotal_for_EUR_in_CC__c</fullName>
        <formula>EXP_ROE_EUR_to_CC__c * Total_Sale_in_EUR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EXP Subtotal for EUR in CC</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXP_Subtotal_for_USD_in_CC__c</fullName>
        <formula>EXP_ROE_USD_to_CC__c * Total_Sale_In_USD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EXP Subtotal for USD in CC</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXP_Subtotal_for_ZAR_in_CC__c</fullName>
        <formula>Total_Sale_In_ZAR__c * EXP_ROE_ZAR_to_CC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EXP Subtotal for ZAR in CC</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exposure_Value__c</fullName>
        <formula>Quote_Exposure__c*Quotation_Sale_Total_in_Selected_CC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exposure Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quotation_Sale_Total_in_Selected_CC__c</fullName>
        <formula>Quotation__r.Quotation_Sale_Total_in_Selected_CC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quotation Sale Total in Selected CC</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quotation__c</fullName>
        <label>Quotation</label>
        <referenceTo>Quotations__c</referenceTo>
        <relationshipName>Quotation_ROE</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quote_Exposure__c</fullName>
        <label>Exposure %</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Selected_Client_Currency_Sell_Rate_EUR__c</fullName>
        <formula>IF( Client_Currency__c == &apos;AUD&apos; , CC_ROE_for_EUR_in_AUD__c, IF(Client_Currency__c == &apos;USD&apos;, CC_ROE_for_EUR_in_USD__c, IF(Client_Currency__c == &apos;EUR&apos;, CC_ROE_for_EUR_in_EUR__c, IF(Client_Currency__c == &apos;GBP&apos;, CC_ROE_for_EUR_in_GPB__c, 0.0) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Selected Client Currency Sell Rate EUR</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Sale_In_USD__c</fullName>
        <formula>Quotation__r.Total_Sale_In_USD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Sale In USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Sale_In_ZAR__c</fullName>
        <formula>Quotation__r.Total_Sale_In_Zar__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Sale In ZAR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Sale_in_EUR__c</fullName>
        <formula>Quotation__r.Sale_in_EUR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Sale in EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Exposure ROE</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Quote_Exposure__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Quotation__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ROE-{00000000}</displayFormat>
        <label>Exposure ROE</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exposure ROE</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>